WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39088
Fix scrolling in composited iframes
https://bugs.webkit.org/show_bug.cgi?id=39088
Summary
Fix scrolling in composited iframes
Simon Fraser (smfr)
Reported
2010-05-13 14:16:38 PDT
When iframe compositing layers get hooked up to their parent document's compositing tree, we didn't implement scrolling of those layers. This breaks gmail on Mac.
Attachments
Patch
(40.69 KB, patch)
2010-05-13 14:27 PDT
,
Simon Fraser (smfr)
hyatt
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2010-05-13 14:17:09 PDT
<
rdar://problem/7980099
>
Simon Fraser (smfr)
Comment 2
2010-05-13 14:27:48 PDT
Created
attachment 56023
[details]
Patch
Dave Hyatt
Comment 3
2010-05-13 15:06:25 PDT
Comment on
attachment 56023
[details]
Patch r=me
Simon Fraser (smfr)
Comment 4
2010-05-13 16:16:35 PDT
http://trac.webkit.org/changeset/59396
WebKit Review Bot
Comment 5
2010-05-13 16:32:36 PDT
http://trac.webkit.org/changeset/59396
might have broken GTK Linux 32-bit Release The following changes are on the blame list:
http://trac.webkit.org/changeset/59395
http://trac.webkit.org/changeset/59396
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug